--- a/www/src/Container/style.css
+++ b/www/src/Container/style.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: row;
   margin-top: 2rem;
-  /* justify-content: space-evenly; */
+  justify-content: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
